--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:400,700,100,300,900);
+@import url("http://fonts.googleapis.com/css?family=Lato:400,700,100,300,900");
 
 $body-bg:						#ecf0f1;
 $font-family-sans-serif:		'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -8,7 +8,10 @@ $navbar-default-brand-color: 	#c0392b;
 $brand-primary: 				#c0392b;
 $jumbotron-bg: 					white;
 
+@import "bootstrap-sprockets";
 @import 'bootstrap';
+@import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css");
+
 
 .center {
 	text-align: center;
@@ -17,3 +20,5 @@ $jumbotron-bg: 					white;
 .navbar-brand {
 	font-weight: bold;
 }
+
+
