--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -6,8 +6,9 @@
       
       <%= link_to image_tag(pin.image.url(:medium)), pin %>
       <div class="panel-body">
-        <%= pin.description %>
-        <strong><%= pin.user.email if pin.user %></strong>
+        <%= pin.description %></br>
+      </br>
+        <strong><%= pin.user.name if pin.user %></strong>
         
         <% if pin.user == current_user %>
         <div class="actions">
